fix: keep side navigation always visible in feed scroll

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -225,6 +225,10 @@ body {
   z-index: 70;
 }
 
+.content > .icon-rail {
+  display: none;
+}
+
 .icon-rail button {
   width: 46px;
   height: 46px;
